--- a/views/partials/topbar.handlebars
+++ b/views/partials/topbar.handlebars
@@ -1,6 +1,6 @@
 
 
-<header id="topBar" class="bgLight">
+<header id="topBar" class="bgWhite">
     <a id='headerLogo' class="headerText colorMedium linkTextNoDecor hoverColorAccent left" href="/">Форум</a>
         {{#if user}}
             <div id="headerProfileBlock" class='right relative vertAlignItemsMid'>
