change color and bg of category if chosen

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -405,6 +405,7 @@ ul.menuList {
     width: 80%;
     text-align: left;
     padding-left: 1vw;
+    
 }
 
 
@@ -413,6 +414,7 @@ ul.menuList {
     display: block;
     font-size: 13pt;
     text-decoration: none;
+    transition: color .1s;
 }
 
 .selectedTheme {
