quotation mark fixed in postPanel div class

--- a/views/partials/postPanel.handlebars
+++ b/views/partials/postPanel.handlebars
@@ -1,4 +1,4 @@
-<div id="selectedTheme>
+<div id="selectedTheme">
     <a class="borderTop myButton colorDarkLink colorSection"
        style="float: left; margin-top: 4.4vh; margin-left: -3vw" href="{{from}}"><img src="/static/images/back.png" height="40"
                                                                    alt="Назад"></a>
