--- a/views/partials/postPanel.handlebars
+++ b/views/partials/postPanel.handlebars
@@ -1,19 +1,5 @@
 <div id="selectedTheme">
-    <div>
-    {{#if replies}}
-        <span><a id='byTime' {{#is sortTag 'byTime' }} href="?sortTag=byTimeAsc" {{else}} href="?sortTag=byTime" {{/is}}
-                 class="colorMedium hoverColorAccent sortLink">По времени <span class="sortLinkArrow"
-                                                                                id="byTimeSortLink">&nbsp;</span></a></span>
-        <span><a id='byReplies' {{#is sortTag 'byReplies' }} href="?sortTag=byRepliesAsc" {{else}}
-                 href="?sortTag=byReplies" {{/is}} class="colorMedium hoverColorAccent sortLink">По ответам
-                <span class="sortLinkArrow" id="byRepliesSortLink">&nbsp;</span></a></span>
-        <span><a id="byLastReply" {{#is sortTag 'byLastReply' }} href="?sortTag=byLastReplyAsc" {{else}}
-                 href="?sortTag=byLastReply" {{/is}} class=" colorMedium hoverColorAccent sortLink">По последнему ответу
-                <span class="sortLinkArrow" id="byLastReplySortLink">&nbsp;</span></a></span>
-    </div>
-
-
-    <a class="left marginButton colorHoverButton" href="{{from}}"><img src="/static/images/back.svg" height="40"
+    <a class="left returnButton colorHoverButton roundBorder" href="{{from}}"><img src="/static/images/back.svg" height="40"
                                                                    alt="Назад"></a>
 
     <div class="bgWhite roundBorder postTitle">
@@ -37,12 +23,6 @@
             <li class="relative liPadding" id="reply_{{this.id}}">
 
                 <div class="postMain">
-                    <div class="left widthRegulate">
-                        <p class="noMarginTop colorMedium">
-                            {{this.text}}
-                        </p>
-                    </div>
-
                     <div class="right   voteField">
                         {{#eq ../user.username this.author_name}}
                         {{else}}
@@ -54,6 +34,7 @@
                                 <input type="image" class="vote" src="/static/images/dislike.svg" alt="#"/>
                                 </form>
                             {{/if}}
+                        {{/eq}}
 
                             <div class="voteCounter">{{#if this.rating }}
                                 {{#gt this.rating 0 }}
@@ -65,7 +46,12 @@
                                 0
                             {{/if}}
                             </div>
-                        {{/eq}}
+                    </div>
+
+                    <div class="left widthRegulate">
+                        <p class="noMarginTop colorMedium">
+                            {{this.text}}
+                        </p>
                     </div>
                 </div>
 
@@ -110,7 +96,6 @@
 
         {{/each}}
     </ul>
-    {{/if}}
     {{#if user}}
     {{else}}
         <p class="colorTextDark">Войдите или зарегистрируйтесь, чтобы ответить</p>
