scripts divided, fixed scripts not working on post view

--- a/views/layouts/postsListViewLayout.handlebars
+++ b/views/layouts/postsListViewLayout.handlebars
@@ -15,3 +15,6 @@
     {{>categoriesListPanel}}
     {{>postsListPanel}}
 </div>
+
+{{>postsListScript}}
+<script src="/static/scripts/script.js"></script>
