maxlength category name

--- a/views/partials/categoriesListPanel.handlebars
+++ b/views/partials/categoriesListPanel.handlebars
@@ -7,7 +7,7 @@
             <form id="newCategory" method="POST" action="/category/create" class="popup hidden bgWhite roundBorder shadowed1">
                 <div class="popupBody mbItems">
                     <input type="text" name="newCategoryName" class="textInput roundBorder" placeholder="Имя категории"
-                        required autocomplete="off">
+                        required autocomplete="off" maxlength="32">
                     <div class="formErrorText colorDanger"></div>
                     <input type="submit" value="Создать" class="bigBtn hoverBgSpecial bgAccent roundBorder">
                 </div>
