--- a/views/partials/popups/createPostPanel.handlebars
+++ b/views/partials/popups/createPostPanel.handlebars
@@ -10,9 +10,10 @@
                 <option value="{{this.name}}">{{this.name}}</option>
                 {{/each}}
             </select>
-            <input name="postTitle" id="myAnswer" type="text" class="textInput block roundBorder"
+            <input name="postTitle" id="myAnswer" type="text" size=50 maxlength="82" class="textInput block roundBorder"
                 placeholder="Заголовок" autocomplete="off" required>
             <textarea cols=75 rows="10" placeholder='Текст поста' name="postText" autocomplete="off"
+            maxlength="8192"
                 class="textInput roundBorder" required></textarea>
             <div class="formErrorText colorDanger"></div>
             <input type="submit" value="Создать" class="bigBtn hoverBgSpecial bgAccent roundBorder">
