--- a/views/partials/popups/signupPanel.handlebars
+++ b/views/partials/popups/signupPanel.handlebars
@@ -4,7 +4,7 @@
     </header>
     <div class="popupBody ">
         <form method="post" action="/signup" class="textCenter mbItems">
-            <input type="text" class="textInput block roundBorder" id="loginPopupFocus" placeholder="Логин" name="login" required>
+            <input type="text" class="textInput block roundBorder" id="loginPopupFocus" placeholder="Логин" name="login" maxlength="12" required>
             <input type="password" class="textInput block roundBorder" placeholder="Пароль" name="psw" required>
             <input type="password" class="textInput block roundBorder" placeholder="Повторите пароль" name="pswConf" required>
             <div id="loginErrorText" class="colorDanger"></div>
