maxlength for edit reply and edit post

--- a/views/partials/popups/createPostPanel.handlebars
+++ b/views/partials/popups/createPostPanel.handlebars
@@ -13,8 +13,7 @@
             <input name="postTitle" id="myAnswer" type="text" size=50 maxlength="82" class="textInput block roundBorder"
                 placeholder="Заголовок" autocomplete="off" required>
             <textarea cols=75 rows="10" placeholder='Текст поста' name="postText" autocomplete="off"
-            maxlength="8192"
-                class="textInput roundBorder" required></textarea>
+            maxlength="8192" class="textInput roundBorder" required></textarea>
             <div class="formErrorText colorDanger"></div>
             <input type="submit" value="Создать" class="bigBtn hoverBgSpecial bgAccent roundBorder">
         </form>
