--- a/views/partials/popups/editPostPanel.handlebars
+++ b/views/partials/popups/editPostPanel.handlebars
@@ -5,7 +5,7 @@
     <div class="popupBody">
         <form id="sendEdition" class="mbItems">
             <label for="editPost" class="block">Заголовок:</label>
-            <input type="text" class="textInput roundBorder block editPostPopupFocus" name="edition" id="editPost" autofocus>
+            <input type="text" class="textInput roundBorder block editPostPopupFocus" name="edition" id="editPost" size=50 maxlength="82" autofocus>
             <input type="submit" value="Сохранить" class="bigBtn roundBorder shadowed1 bgAccent block hoverBgAccent"
                    src="/static/images/send.png">
         </form>
