--- a/views/partials/popups/editReplyPanel.handlebars
+++ b/views/partials/popups/editReplyPanel.handlebars
@@ -3,7 +3,7 @@
     <div class="popupBody">
         <form id="sendReply" class="mbItems">
             <label for="editReply" class="block colorMedium">Ваш ответ</label>
-            <textarea name="replyEdition" id="editReply" class="textInput roundBorder" required></textarea>
+            <textarea name="replyEdition" maxlength="8192" cols=64 rows=12 id="editReply" class="textInput roundBorder" required></textarea>
             <input type="submit" value="Сохранить" class="bigBtn roundBorder shadowed1 bgAccent block hoverBgAccent"
                    src="/static/images/send.png">
         </form>
