--- a/views/partials/postPanel.handlebars
+++ b/views/partials/postPanel.handlebars
@@ -1,5 +1,5 @@
 <div id="selectedTheme">
-    <a class="left returnButton colorHoverButton roundBorder" href="{{from}}"><img src="/static/images/back.svg" height="40"
+    <a class="left returnButton colorHoverButton roundBorder shadowed1" href="{{from}}"><img src="/static/images/back.svg" height="40"
                                                                    alt="Назад"></a>
 
     <div class="bgWhite roundBorder postTitle">
