replies title max width

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -748,6 +748,11 @@ ul.menuList {
     padding: 2% 2% 2% 2%;
 }
 
+.postTitle > h3 {
+    max-width: 90%;
+    overflow: hidden;
+}
+
 .returnButton {
     display: block;
     background: #ffffff;
