--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -423,17 +423,27 @@ ul.menuList {
     left: 30px;
 }
 
-.postActionsList {
+.postActionsList, .replyActionsList {
     position: absolute;
     right: 30px;
     bottom: 60px;
 }
+
 
 .dropdownAreapostActionsList {
     width: 200px;
     height: 200px;
     right: -60px;
     top: 70px;
+    z-index: 1;
+}
+
+.dropdownAreareplyActionsList {
+    width: 200px;
+    height: 200px;
+    right: -60px;
+    bottom:-110px;
+
     z-index: 1;
 }
 
