--- a/views/partials/postPanel.handlebars
+++ b/views/partials/postPanel.handlebars
@@ -72,7 +72,7 @@
 
                     <div class="right">
                         <a onclick="showDropdown('replyActionsList{{this.id}}');">
-                            <img src="/static/images/icons/more.svg" style="width: 15px; padding: 5px" alt="">
+                            <img src="/static/images/icons/more.svg" style="width: 15px; padding: 5px;" alt="">
                         </a>
                         &nbsp;
                     </div>
