--- a/views/partials/postPanel.handlebars
+++ b/views/partials/postPanel.handlebars
@@ -54,8 +54,8 @@
                         </p>
                     </div>
                 </div>
-
-                <footer class="vertAlignItemsMid">
+                <div class="clearFix"></div>
+                <footer>
                     <div class="left">
                         <img {{#if this.author_name}} src="https://api.adorable.io/avatars/128/{{this.author_name}}.png"
                         {{else}}
