fix footer vert align mid

--- a/views/partials/postPanel.handlebars
+++ b/views/partials/postPanel.handlebars
@@ -55,7 +55,7 @@
                     </div>
                 </div>
                 <div class="clearFix"></div>
-                <footer>
+                <footer  class="vertAlignItemsMid">
                     <div class="left">
                         <img {{#if this.author_name}} src="https://api.adorable.io/avatars/128/{{this.author_name}}.png"
                         {{else}}
