--- a/views/partials/postPanel.handlebars
+++ b/views/partials/postPanel.handlebars
@@ -2,7 +2,7 @@
     <a class="left returnButton colorHoverButton roundBorder shadowed1" href="{{from}}"><img src="/static/images/back.svg" height="40"
                                                                    alt="Назад"></a>
 
-    <div class="bgWhite roundBorder postTitle">
+    <div class="bgWhite roundBorder postTitle" style="margin-top: 35px;">
         <h3 class="textTitle left">
             {{post.title}}
         </h3>
