fix reply deletion

--- a/views/partials/postPanel.handlebars
+++ b/views/partials/postPanel.handlebars
@@ -83,7 +83,7 @@
                             <li>
                                 <a onclick="showPopup('editReplyPopup'); editReply({{this.id}}, '{{this.text}}')">Редактировать</a>
                             </li>
-                            <li><a class="colorTextDanger" onclick="deletePost({{../post.id}}); ">Удалить</a></li>
+                            <li><a class="colorTextDanger" onclick="deleteReply({{this.id}}); ">Удалить</a></li>
                         </ul>
                     </div>
                 {{else}}
