--- a/views/partials/scripts/postScript.handlebars
+++ b/views/partials/scripts/postScript.handlebars
@@ -36,15 +36,16 @@
     }
     let hideBtn = document.querySelector('#hideReplyFormBtn')
     let composeBtn = document.querySelector('#composeReplyBtn')
-    let form = document.querySelector('#replyForm')
+    let replyForm = document.querySelector('#replyForm')
 
     composeBtn.onclick = () => {
-        form.classList.remove('hidden')
+        console.log(1)
+        replyForm.classList.remove('hidden')
         composeBtn.classList.add('hidden')
 
     }
     hideBtn.onclick = () => {
-        form.classList.add('hidden')
+        replyForm.classList.add('hidden')
         composeBtn.classList.remove('hidden')
     }
 
