--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -356,6 +356,10 @@ ul.menuList {
     bottom: 100px;
 }
 
+#replyBtn > input {
+    margin: -15px 0 0 -15px;
+}
+
 #replyForm {
     position: fixed;
     right: 280px;
