--- a/views/partials/replyForm.handlebars
+++ b/views/partials/replyForm.handlebars
@@ -3,11 +3,11 @@
         <div id="hideReplyFormBtn" class="hideIcon inlineBlock"></div>
     </div>
     <textarea placeholder="Ваш ответ" name="myAnswer" class="textInput inlineBlock roundBorder" required></textarea>
-    <div id="replyBtn" class="roundBtn bgAccent hoverBgSpecial inlineBlock shadowed1"><input type="image"
+    <div id="replyBtn" class="roundBtn bgAccent hoverBgSpecial inlineBlock shadowed1"><input type="image"style="padding:15px;"
                                                                                              src="/static/images/icons/right-arrow.svg">
     </div>
 </form>
 
-<div id="composeReplyBtn" class="roundBtn bgAccent hoverBgSpecial shadowed1"><input type="image"
+<div id="composeReplyBtn" class="roundBtn bgAccent hoverBgSpecial shadowed1"><input type="image" 
                                                                                     src="/static/images/icons/edit.svg">
 </div>
